CPAR template model added following patterns from Splash; fixed grid display on permit report page to account for change from first and last name columns to single name column
